--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -12,9 +12,12 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <div class="input-group input-group-lg">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" id="zipcode" name="zipcode"
+          required pattern="^[0-9]"
+          [(ngModel)]="input" #zipcode="ngModel">
+        <button type="button" class="btn- btn-light" (click)="getWeather(input)">Get Weather</button>
       </div>
     </div>
   </div>
