--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -22,3 +22,14 @@
     </div>
   </div>
 </div>
+
+<div class="container pt-5">
+  <div class="row">
+    <div class="col-md-4">
+      <current-forecast></current-forecast>
+    </div>
+    <div class="col-md-4">
+        <five-day-forecast></five-day-forecast>
+    </div>
+  </div>
+</div>
