--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <h1>Weather App</h1>
+</div>
+
+<app-weather></app-weather>
+
+<div class="container pt-5">
+    <div class="row">
+        <div class="col-md-4">
+            <current-forecast></current-forecast>
+        </div>
+        <div class="col-md-4">
+            <five-day-forecast></five-day-forecast>
+        </div>
+    </div>
+</div>
