did display for current-forecast. need to fix icon placement.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
 
 <div class="container pt-5">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-6">
             <current-forecast></current-forecast>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-6">
             <five-day-forecast></five-day-forecast>
         </div>
     </div>
