--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
+
+.super {
+    position: fixed;
+    padding-top: 1%;
+    padding-left: .2%;
+    font-size: xx-large;
+}
