--- a/src/app/current-forecast/current-forecast.component.html
+++ b/src/app/current-forecast/current-forecast.component.html
@@ -1,8 +1,3 @@
-<p>
-  current-forecast works!
-</p>
-
-
 <div *ngIf="weather.city != 'INITIAL_STATE'">
   <div class="card">
     <div class="card-body">
@@ -18,7 +13,7 @@
             <div class="col-sm">
               <p class="d-inline display-1"> 
                 {{weather.temperature_current}} 
-                <span class="super d-inline text-muted">&#176; F</span>
+                <span class="super d-inline text-muted">&#176;F</span>
               </p>
             </div>
           </div>
@@ -28,16 +23,23 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <p> low: {{weather.temperature_low}} </p>
+            <p> low: {{weather.temperature_low}}&#176;F</p>
           </div>
           <div class="col-sm">
-            <p> high: {{weather.temperature_high}} </p>
+            <p> high: {{weather.temperature_high}}&#176;F</p>
           </div>
         </div>
       </div>
 
-      <div>
-        <p>humidity: {{weather.humidity}}% </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <p>humidity: {{weather.humidity}}% </p>
+          </div>
+          <div class="col-sm">
+            <p>wind: {{weather.wind}} mph</p>
+          </div>
+        </div>
       </div>
 
       <div>
