added basic error handling

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -27,3 +27,9 @@
       </div>
   </div>
 </div>
+
+<div class="container" *ngIf="ERROR_FLAG == 1">
+  <div class="row">
+    <h1>Zip Code does not exist.</h1>
+  </div>
+</div>
