forgot to change one thing in a view

--- a/src/app/current-forecast/current-forecast.component.html
+++ b/src/app/current-forecast/current-forecast.component.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-sm-auto">
               <div class="text-left">
-                <img src="https://openweathermap.org/img/w/01d.png">
+                <img src="{{ weather.icon}}">
               </div>
             </div>
             <div class="col-sm">
