added border to table in forecast view

--- a/src/app/five-day-forcast/five-day-forcast.component.html
+++ b/src/app/five-day-forcast/five-day-forcast.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="forecast[0].temp_day_mean != -100">
-  <table class="table">
+  <table class="table table-bordered">
     <thead class="thead-dark">
       <tr>
         <th scope="col">Date</th>
